# WebSocket-Client-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  trade_prices.txt
include/: file_writer.h  reconnect_manager.h  websocket_handler.h
scripts/: build.bat  build_and_run.bat  run.bat
src/: file_writer.c  reconnect_manager.c  websocket_handler.c
